# embedded-cpp-de

Cpp/CodeAlong/Extras/: 01 Adventure Game Pitch.cpp  04 Weak Pointer.cpp  07 Das Statische Strategie Pattern.cpp  WidgetV1.h  WidgetV3Main.cpp
Cpp/CodeAlong/Intro/: 01 Herzlich Willkommen.cpp
Cpp/CodeAlong/Woche-1/: 01 Herzlich Willkommen.cpp  04 Was sind gute Tests.cpp  06 Das Catch2 Test-Framework.cpp  07 Catch2 Sections.cpp  08 Isolation von Unit-Tests.cpp  09 Test-Doubles.cpp  11 Einführung in SOLID und GRASP.cpp  12 Adventure Spiel Einführung.cpp  13 Adventure V1.cpp  14 GRASP Creator.cpp  15 GRASP Informations-Experte.cpp  16 Workshop Einführung.cpp
Cpp/CodeAlong/Woche-2/: 01 Schreiben von guten Unit-Tests.cpp  02 Test-Driven-Development.cpp  03 Vererbung.cpp  04 Virtuelle Funktionen.cpp  05 Destruktoren und Vererbung.cpp  06 Slicing.cpp  08 Code Smells.cpp  09 Refactoring Catalog Basics.cpp  10 Refactoring Extrahiere Funktion.cpp  11 Refactoring Inline Funktion.cpp  12 Refactoring Extrahiere Variable.cpp  13 Refactoring Inline Variable.cpp  14 Was ist Clean Code.cpp  (+2 more)
code/completed/: CMakeLists.txt
code/completed/etl_examples/: CMakeLists.txt  etl_basic.cpp  etl_expected.cpp  etl_expected.h  etl_expected_main.cpp  etl_observer.cpp  etl_observer.h  etl_observer_main.cpp  etl_singleton.cpp  etl_singleton.h  etl_singleton_main.cpp  ticker_symbol.h  ticker_symbols.inc
code/completed/prime_factors/: prime_factors_main.cpp  prime_factors_test.cpp
code/completed/singleton/: singleton.cpp  singleton.h
code/starter_kits/: CMakeLists.txt
(+294 files in other folders)
